<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory app:title="@string/general_setting"
        app:icon="@drawable/ic_baseline_language_24"
        android:textColor="@color/white">

        <ListPreference
            app:defaultValue="English"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            android:textColorPrimary="#6200EA"
            app:title="@string/default_language"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:key="background_mode"
            app:title="@string/default_mode">

        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/unit_setting"
        app:icon="@drawable/ic_baseline_settings_24">

        <ListPreference
            app:defaultValue="Clecious"
            app:entries="@array/temperature_entries"
            app:entryValues="@array/temperature_values"
            app:key="temperature"
            app:title="@string/default_temperature"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="English"
            app:entries="@array/pressure_entries"
            app:entryValues="@array/pressure_values"
            app:key="pressure"
            app:title="@string/default_pressure"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="m/s"
            app:entries="@array/wind_entries"
            app:entryValues="@array/wind_values"
            app:key="wind"
            app:title="@string/default_wind"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/alert_setting"
        app:icon="@drawable/ic_baseline_alarm_add_24">

        <Preference
            app:key="notification"
            app:title="@string/notification_setting">

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>