<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/bottom_today"/>

    <item android:title="@string/daily"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_today_24"
        android:id="@+id/bottom_daily"/>

    <item android:title="@string/map"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_map_24"
        android:id="@+id/bottom_map"/>

    <item android:title="@string/settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_settings_24"
        android:id="@+id/bottom_settings"/>

</menu>